// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OAuth2Session /> > renders a finished session 1`] = `
<section
  className="_sessionCardRoot_e2909e"
>
  <a
    aria-disabled={true}
    className="_sessionCard_e2909e _disabled_e2909e"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    role="link"
  >
    <header
      className="_cardHeader_e2909e"
    >
      <svg
        aria-label="Computer"
        className="_deviceTypeIcon_e677aa"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 18c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 2 16V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 4 3h16c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v11c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 20 18H4Zm0-2h16V5H4v11Zm-2 5a.967.967 0 0 1-.712-.288A.968.968 0 0 1 1 20c0-.283.096-.52.288-.712A.967.967 0 0 1 2 19h20c.283 0 .52.096.712.288.192.191.288.429.288.712s-.096.52-.288.712A.968.968 0 0 1 22 21H2Z"
        />
      </svg>
      <div
        className="_content_e2909e"
      >
        <div
          className="_name_e2909e"
        >
          Unknown device
        </div>
        <div
          className="_client_e2909e"
        >
          Element
        </div>
      </div>
    </header>
    <ul
      className="_metadata_e2909e"
    >
      <li>
        <div
          className="_key_e2909e"
        >
          Signed in
        </div>
        <div
          className="_value_e2909e"
        >
          <time
            dateTime="2023-06-29T03:35:17Z"
          >
            Thu, 29 Jun 2023, 03:35
          </time>
        </div>
      </li>
      <li>
        <div
          className="_key_e2909e"
        >
          Device ID
        </div>
        <div
          className="_value_e2909e"
        >
          abcd1234
        </div>
      </li>
    </ul>
  </a>
</section>
`;

exports[`<OAuth2Session /> > renders an active session 1`] = `
<section
  className="_sessionCardRoot_e2909e"
>
  <a
    className="_sessionCard_e2909e"
    disabled={false}
    href="/sessions/session-id"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
  >
    <header
      className="_cardHeader_e2909e"
    >
      <svg
        aria-label="Computer"
        className="_deviceTypeIcon_e677aa"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 18c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 2 16V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 4 3h16c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v11c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 20 18H4Zm0-2h16V5H4v11Zm-2 5a.967.967 0 0 1-.712-.288A.968.968 0 0 1 1 20c0-.283.096-.52.288-.712A.967.967 0 0 1 2 19h20c.283 0 .52.096.712.288.192.191.288.429.288.712s-.096.52-.288.712A.968.968 0 0 1 22 21H2Z"
        />
      </svg>
      <div
        className="_content_e2909e"
      >
        <div
          className="_name_e2909e"
        >
          Unknown device
        </div>
        <div
          className="_client_e2909e"
        >
          Element
        </div>
      </div>
    </header>
    <ul
      className="_metadata_e2909e"
    >
      <li>
        <div
          className="_key_e2909e"
        >
          Signed in
        </div>
        <div
          className="_value_e2909e"
        >
          <time
            dateTime="2023-06-29T03:35:17Z"
          >
            Thu, 29 Jun 2023, 03:35
          </time>
        </div>
      </li>
      <li>
        <div
          className="_key_e2909e"
        >
          Device ID
        </div>
        <div
          className="_value_e2909e"
        >
          abcd1234
        </div>
      </li>
    </ul>
  </a>
  <div
    className="_action_e2909e"
  >
    <button
      aria-controls="radix-:r0:"
      aria-expanded={false}
      aria-haspopup="dialog"
      className="_button_zt6rp_17 _has-icon_zt6rp_61 _destructive_zt6rp_111"
      data-kind="secondary"
      data-size="sm"
      data-state="closed"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height={20}
        viewBox="0 0 24 24"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 12.031a.97.97 0 0 1 .287-.712.968.968 0 0 1 .713-.289h7.15l-1.875-1.875a.96.96 0 0 1-.3-.7c0-.266.108-.508.325-.725a.93.93 0 0 1 .712-.287.977.977 0 0 1 .688.287l3.6 3.6c.1.1.17.209.212.325.042.117.063.242.063.375 0 .134-.02.259-.063.375a.877.877 0 0 1-.212.325l-3.6 3.6a.93.93 0 0 1-.712.288.977.977 0 0 1-.688-.288 1.02 1.02 0 0 1-.313-.712.93.93 0 0 1 .288-.713l1.875-1.875H10a.968.968 0 0 1-.713-.287A.968.968 0 0 1 9 12.03Zm-6-7c0-.55.196-1.02.587-1.412A1.926 1.926 0 0 1 5 3.03h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5v14h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19.03v-14Z"
        />
      </svg>
      Sign out
    </button>
  </div>
</section>
`;

exports[`<OAuth2Session /> > renders correct icon for a native session 1`] = `
<section
  className="_sessionCardRoot_e2909e"
>
  <a
    aria-disabled={true}
    className="_sessionCard_e2909e _disabled_e2909e"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    role="link"
  >
    <header
      className="_cardHeader_e2909e"
    >
      <svg
        aria-label="Mobile"
        className="_deviceTypeIcon_e677aa"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 23c-.55 0-1.02-.196-1.412-.587A1.926 1.926 0 0 1 5 21V3c0-.55.196-1.02.588-1.413A1.926 1.926 0 0 1 7 1h10c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v18c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 17 23H7Zm0-5h10V6H7v12Z"
        />
      </svg>
      <div
        className="_content_e2909e"
      >
        <div
          className="_name_e2909e"
        >
          Unknown device
        </div>
        <div
          className="_client_e2909e"
        >
          Element
        </div>
      </div>
    </header>
    <ul
      className="_metadata_e2909e"
    >
      <li>
        <div
          className="_key_e2909e"
        >
          Signed in
        </div>
        <div
          className="_value_e2909e"
        >
          <time
            dateTime="2023-06-29T03:35:17Z"
          >
            Thu, 29 Jun 2023, 03:35
          </time>
        </div>
      </li>
      <li>
        <div
          className="_key_e2909e"
        >
          Device ID
        </div>
        <div
          className="_value_e2909e"
        >
          abcd1234
        </div>
      </li>
    </ul>
  </a>
</section>
`;
